# backend/internal/handler/router.go
@@ -196,6 +196,7 @@ func NewRouter(deps Dependencies) *gin.Engine {
 	protected.DELETE("/buckets/:bucket/objects/*key", handler.deleteObject)
 	protected.POST("/sites", handler.createSite)
 	protected.POST("/sites/publish/object", handler.publishObjectSite)
+	protected.POST("/sites/publish/file", middleware.MaxBodySize(deps.Config.MaxUploadSizeBytes), handler.publishSiteFile)
 	protected.POST("/sites/publish", middleware.MaxBodySize(deps.Config.MaxUploadSizeBytes), handler.publishSite)
 	protected.GET("/sites", handler.listSites)
 	protected.GET("/sites/:siteID", handler.getSite)
